adjusted navbar to be fixed

--- a/main.html
+++ b/main.html
@@ -9,21 +9,45 @@
 
 <body>
     <header id="colorbar">
-
         <div class="navbar">
-            <img src="logo_10195.png" id="logo">
             <div class="navtext">
+                <img src="logo_10195.png" id="logo">
                 <div class="nav" id="special"><a class="navobj" href="Home.html">Home</a></div>
-                <div class="nav"><a class="navobj" href="AboutUs.html">About Us</a></div>
-                <div class="nav"><a class="navobj" href="CurrentE.html">Current Events</a></div>
-                <div class="nav"><a class="navobj" href="OurRobot.html">Our Robot</a></div>
+                <div class="nav"><a class="navobj" href="AboutUs.html">AboutUs</a></div>
+                <div class="nav"><a class="navobj" href="CurrentE.html">CurrentEvents</a></div>
+                <div class="nav"><a class="navobj" href="OurRobot.html">OurRobot</a></div>
                 <div class="nav"><a class="navobj" href="Resources.html">Resources</a></div>
                 <div class="nav"><a class="navobj" href="Sponsors.html">Sponsors</a></div>
-                <div class="nav"><a class="navobj" href="ContactUs.html">Contact Us</a></div>
+                <div class="nav"><a class="navobj" href="ContactUs.html">ContactUs</a></div>
             </div>
         </div>
-
     </header>
+    <section class="sectionformat">
+        <div id="banner">
+            <h1 class="heading">Welcome to Austin's Writing Hub</h1>
+        </div>
+
+        <h2 class="subH">Links for my <span class="dankai">stories</span> on fanfiction.net</h2>
+        <p class="links"><a class="links" href="https://www.fanfiction.net/s/14057439/1/Remnant-s-Devil">Remanant's
+                Devil</a></p>
+        <p class="links"><a class="links" href="https://www.fanfiction.net/s/13630626/1/SAO-Vs-Tokyo-Ghoul">SAO vs Tokyo
+                Ghoul</a></p>
+
+        </p>
+    </section>
+    <section id="space">
+
+    </section>
+    <section class="sectionformat">
+        <h2 class="subH" id="subH2">About me</h2>
+        <p class="text">Hello, I am Austin Varghese, pen name: Admin17, and I like writing fanfictions.
+            <br> Click <a class="inlinelinks" href="https://www.fanfiction.net/u/11610770/Admin19">here</a> to visit my
+            fanfiction page.
+
+    </section>
+
+
+
 
 
 
