adjusted website for different devices

--- a/main.html
+++ b/main.html
@@ -22,30 +22,38 @@
             </div>
         </div>
     </header>
-    <section class="sectionformat">
-        <div id="banner">
-            <h1 class="heading">Welcome to Austin's Writing Hub</h1>
-        </div>
+        <section class="sectionformat">
+            <div id="banner">
+                <h1 class="heading">Welcome to Austin's Writing Hub</h1>
+            </div>
 
-        <h2 class="subH">Links for my <span class="dankai">stories</span> on fanfiction.net</h2>
-        <p class="links"><a class="links" href="https://www.fanfiction.net/s/14057439/1/Remnant-s-Devil">Remanant's
-                Devil</a></p>
-        <p class="links"><a class="links" href="https://www.fanfiction.net/s/13630626/1/SAO-Vs-Tokyo-Ghoul">SAO vs Tokyo
-                Ghoul</a></p>
+            <h2 class="subH">Links for my <span class="dankai">stories</span> on fanfiction.net</h2>
+            <p class="links"><a class="links" href="https://www.fanfiction.net/s/14057439/1/Remnant-s-Devil">Remanant's
+                    Devil</a></p>
+            <p class="links"><a class="links" href="https://www.fanfiction.net/s/13630626/1/SAO-Vs-Tokyo-Ghoul">SAO vs
+                    Tokyo
+                    Ghoul</a></p>
 
-        </p>
-    </section>
-    <section id="space">
+            </p>
+        </section>
+        <section id="space">
+            <div>
+                <h2 class="subH" id="subH2">About me</h2>
+                <p class="text">Hello, I am Austin Varghese, pen name: Admin17, and I like writing fanfictions.
+                    <br> Click <a class="inlinelinks" href="https://www.fanfiction.net/u/11610770/Admin19">here</a> to visit
+                    my
+                    fanfiction page.
+    
+            </div>
+        </section>
+        <section class="sectionformat">
+            <h2 class="subH" id="subH2">About me</h2>
+            <p class="text">Hello, I am Austin Varghese, pen name: Admin17, and I like writing fanfictions.
+                <br> Click <a class="inlinelinks" href="https://www.fanfiction.net/u/11610770/Admin19">here</a> to visit
+                my
+                fanfiction page.
 
-    </section>
-    <section class="sectionformat">
-        <h2 class="subH" id="subH2">About me</h2>
-        <p class="text">Hello, I am Austin Varghese, pen name: Admin17, and I like writing fanfictions.
-            <br> Click <a class="inlinelinks" href="https://www.fanfiction.net/u/11610770/Admin19">here</a> to visit my
-            fanfiction page.
-
-    </section>
-
+        </section>
 
 
 
