added front image

--- a/main.html
+++ b/main.html
@@ -4,6 +4,7 @@
 <head>
     <link rel="stylesheet" href="Style.css">
     <meta charset="utf-8">
+    <!-- <meta name="viewport" content="width-device-width, initial-scale-1"> -->
     <title>Night Owls Home</title>
 </head>
 
@@ -12,7 +13,7 @@
         <div class="navbar">
             <div class="navtext">
                 <img src="logo_10195.png" id="logo">
-                <div class="nav" id="special"><a class="navobj" href="Home.html">Home</a></div>
+                <div class="nav" id="special"><a class="navobj" href="main.html">Home</a></div>
                 <div class="nav"><a class="navobj" href="AboutUs.html">AboutUs</a></div>
                 <div class="nav"><a class="navobj" href="CurrentE.html">CurrentEvents</a></div>
                 <div class="nav"><a class="navobj" href="OurRobot.html">OurRobot</a></div>
@@ -22,55 +23,34 @@
             </div>
         </div>
     </header>
-<<<<<<< Updated upstream
-        <section class="sectionformat">
-            <div id="banner">
-                <h1 class="heading">Welcome to Austin's Writing Hub</h1>
-            </div>
-=======
+
     <section class="sectionformat">
-        <div id="banner">
-            <h1 class="heading">Night Owls</h1>
+        <div id="centralimg">
+            <img src="robomain.png" id="centralimg" alt="picture of the night owls team during 2022 states competition">
+            <img src="logo_10195.png" id="headingimg" alt="night owls logo">
+            <h1 class="heading">FTC 10195 <br> Night Owls</h1>
         </div>
+    </section>
+    <section id="space">
 
         <h2 class="subH">Links for my <span class="dankai">stories</span> on fanfiction.net</h2>
         <p class="links"><a class="links" href="https://www.fanfiction.net/s/14057439/1/Remnant-s-Devil">Remanant's
                 Devil</a></p>
-        <p class="links"><a class="links" href="https://www.fanfiction.net/s/13630626/1/SAO-Vs-Tokyo-Ghoul">SAO vs Tokyo
+        <p class="links"><a class="links" href="https://www.fanfiction.net/s/13630626/1/SAO-Vs-Tokyo-Ghoul">SAO vs
+                Tokyo
                 Ghoul</a></p>
 
         </p>
     </section>
-    <section id="space">
->>>>>>> Stashed changes
 
-            <h2 class="subH">Links for my <span class="dankai">stories</span> on fanfiction.net</h2>
-            <p class="links"><a class="links" href="https://www.fanfiction.net/s/14057439/1/Remnant-s-Devil">Remanant's
-                    Devil</a></p>
-            <p class="links"><a class="links" href="https://www.fanfiction.net/s/13630626/1/SAO-Vs-Tokyo-Ghoul">SAO vs
-                    Tokyo
-                    Ghoul</a></p>
+    <section class="sectionformat">
+        <h2 class="subH" id="subH2">About me</h2>
+        <p class="text">Hello, I am Austin Varghese, pen name: Admin17, and I like writing fanfictions.
+            <br> Click <a class="inlinelinks" href="https://www.fanfiction.net/u/11610770/Admin19">here</a> to visit
+            my
+            fanfiction page.
 
-            </p>
-        </section>
-        <section id="space">
-            <div>
-                <h2 class="subH" id="subH2">About me</h2>
-                <p class="text">Hello, I am Austin Varghese, pen name: Admin17, and I like writing fanfictions.
-                    <br> Click <a class="inlinelinks" href="https://www.fanfiction.net/u/11610770/Admin19">here</a> to visit
-                    my
-                    fanfiction page.
-    
-            </div>
-        </section>
-        <section class="sectionformat">
-            <h2 class="subH" id="subH2">About me</h2>
-            <p class="text">Hello, I am Austin Varghese, pen name: Admin17, and I like writing fanfictions.
-                <br> Click <a class="inlinelinks" href="https://www.fanfiction.net/u/11610770/Admin19">here</a> to visit
-                my
-                fanfiction page.
-
-        </section>
+    </section>
 
 
 
