worked on making a second section

--- a/main.html
+++ b/main.html
@@ -9,21 +9,6 @@
 </head>
 
 <body>
-    <header id="colorbar">
-        <div class="navbar">
-            <div class="navtext">
-                <img src="logo_10195.png" id="logo">
-                <div class="nav" id="special"><a class="navobj" href="main.html">Home</a></div>
-                <div class="nav"><a class="navobj" href="AboutUs.html">AboutUs</a></div>
-                <div class="nav"><a class="navobj" href="CurrentE.html">CurrentEvents</a></div>
-                <div class="nav"><a class="navobj" href="OurRobot.html">OurRobot</a></div>
-                <div class="nav"><a class="navobj" href="Resources.html">Resources</a></div>
-                <div class="nav"><a class="navobj" href="Sponsors.html">Sponsors</a></div>
-                <div class="nav"><a class="navobj" href="ContactUs.html">ContactUs</a></div>
-            </div>
-        </div>
-    </header>
-
     <section class="sectionformat">
         <div id="centralimg">
             <img src="robomain.png" id="centralimg" alt="picture of the night owls team during 2022 states competition">
@@ -31,16 +16,23 @@
             <h1 class="heading">FTC 10195 <br> Night Owls</h1>
         </div>
     </section>
-    <section id="space">
 
-        <h2 class="subH">Links for my <span class="dankai">stories</span> on fanfiction.net</h2>
-        <p class="links"><a class="links" href="https://www.fanfiction.net/s/14057439/1/Remnant-s-Devil">Remanant's
-                Devil</a></p>
-        <p class="links"><a class="links" href="https://www.fanfiction.net/s/13630626/1/SAO-Vs-Tokyo-Ghoul">SAO vs
-                Tokyo
-                Ghoul</a></p>
 
-        </p>
+    <div class="bar">
+
+    </div>
+
+    <section id="aboutus">
+        <div id="secondsection">
+            <div id="smolimgplace">
+                <img src="roboworkimg.png" id="smolimg"
+                    alt="picture of the night owls team during 2022 states competition">
+            </div>
+            <div id="sidetext">
+                <h1 id="subH1">Hoot we are</h1>
+                <p>bankai</p>
+            </div>
+        </div>
     </section>
 
     <section class="sectionformat">
@@ -55,7 +47,20 @@
 
 
 
-
+    <header id="colorbar">
+        <div class="navbar">
+            <div class="navtext">
+                <img src="logo_10195.png" id="logo">
+                <div class="nav" id="special"><a class="navobj" href="main.html">Home</a></div>
+                <div class="nav"><a class="navobj" href="AboutUs.html">AboutUs</a></div>
+                <div class="nav"><a class="navobj" href="CurrentE.html">CurrentEvents</a></div>
+                <div class="nav"><a class="navobj" href="OurRobot.html">OurRobot</a></div>
+                <div class="nav"><a class="navobj" href="Resources.html">Resources</a></div>
+                <div class="nav"><a class="navobj" href="Sponsors.html">Sponsors</a></div>
+                <div class="nav"><a class="navobj" href="ContactUs.html">ContactUs</a></div>
+            </div>
+        </div>
+    </header>
 </body>
 
 
