--- a/main.html
+++ b/main.html
@@ -4,7 +4,7 @@
 <head>
     <link rel="stylesheet" href="Style.css">
     <meta charset="utf-8">
-    <!-- <meta name="viewport" content="width-device-width, initial-scale-1"> -->
+    <meta name="viewport" content="width-device-width, initial-scale-1">
     <title>Night Owls Home</title>
 </head>
 
