added sponsor section

--- a/main.html
+++ b/main.html
@@ -29,22 +29,30 @@
                     alt="picture of the night owls team during 2022 states competition">
             </div>
             <div id="sidetext">
-                <h1 id="subH1">Hoot we are</h1>
-                <p>bankai</p>
+                <h1 class="subH1">Hoot we are</h1>
+                <p class="text"><span id="indent">Lorem ipsum dolor sit amet,</span> consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                    aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+                    culpa qui officia deserunt mollit anim id est laborum.</p>
+
+                <p id="aboutbutton"><a id="learnlink" href="AboutUs.html">Learn more</a></p>    
             </div>
         </div>
     </section>
 
-    <section class="sectionformat">
-        <h2 class="subH" id="subH2">About me</h2>
-        <p class="text">Hello, I am Austin Varghese, pen name: Admin17, and I like writing fanfictions.
-            <br> Click <a class="inlinelinks" href="https://www.fanfiction.net/u/11610770/Admin19">here</a> to visit
-            my
-            fanfiction page.
+    <div class="bars">
 
+    </div>
+
+    <section class="sponsorsection">
+        <h1 class="subH1" id="subH12">Our Sponsors</h1>
+        <h1 class="placeholder">we broke oop</h1>
     </section>
 
+    <div class="barss">
 
+    </div>
 
 
     <header id="colorbar">
@@ -61,6 +69,8 @@
             </div>
         </div>
     </header>
+
+
 </body>
 
 
