--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
 <body>
     <section class="sectionformat">
         <div id="centralimg">
-            <img src="robomain.png" id="centralimg" alt="picture of the night owls team during 2022 states competition">
+            <img src="robomain.png" id="centrallimg" alt="picture of the night owls team during 2022 states competition">
             <img src="logo_10195.png" id="headingimg" alt="night owls logo">
             <h1 class="heading">FTC 10195 <br> Night Owls</h1>
         </div>
@@ -54,11 +54,19 @@
 
     </div>
 
+    <footer>
+        <h2>Follow our updates</h2>
+        <div class="footbar">
+            <div class="foot"><img id="logos" src="instagram.png"><a class="footobj" href="main.html">ftc10195</a></div>
+            <div class="foot"><a class="footobj" href="VargheseAssignment2.html"></a></div>
+            <div class="foot"><a class="footobj" href="SAOxTG.html">SAO vs Tokyo Ghoul</a></div>
+        </div>
+    </footer>
 
     <header id="colorbar">
         <div class="navbar">
             <div class="navtext">
-                <img src="logo_10195.png" id="logo">
+                <img src="logo_10195.png" id="logo" alt="logo of 10195">
                 <div class="nav" id="special"><a class="navobj" href="main.html">Home</a></div>
                 <div class="nav"><a class="navobj" href="AboutUs.html">AboutUs</a></div>
                 <div class="nav"><a class="navobj" href="CurrentE.html">CurrentEvents</a></div>
