completed rough draft of footer

--- a/main.html
+++ b/main.html
@@ -57,9 +57,9 @@
     <footer>
         <h2>Follow our updates</h2>
         <div class="footbar">
-            <div class="foot"><img id="logos" src="instagram.png"><a class="footobj" href="main.html">ftc10195</a></div>
-            <div class="foot"><a class="footobj" href="VargheseAssignment2.html"></a></div>
-            <div class="foot"><a class="footobj" href="SAOxTG.html">SAO vs Tokyo Ghoul</a></div>
+            <div class="foot"><img id="logos" src="instagram.png"><a class="footobj" href="main.html">@ftc10195</a></div>
+            <div class="foot"><img id="logos" src="twitter.png"><a class="footobj" href="VargheseAssignment2.html">@ftc10195</a></div>
+            <div class="foot"><img id="logos" src="tiktok.png"><a class="footobj" href="SAOxTG.html">@FTC Night Owls</a></div>
         </div>
     </footer>
 
