fixed padding issue with logo and text

--- a/main.html
+++ b/main.html
@@ -11,9 +11,14 @@
 <body>
     <section class="sectionformat">
         <div id="centralimg">
-            <img src="robomain.png" id="centrallimg" alt="picture of the night owls team during 2022 states competition">
-            <img src="logo_10195.png" id="headingimg" alt="night owls logo">
+            <img src="robomain.png" id="centrallimg"
+                alt="picture of the night owls team during 2022 states competition">
+            <div id="logoss">
+                <img src="logo_10195.png" id="headingimg" alt="night owls logo">
+            </div>
             <h1 class="heading">FTC 10195 <br> Night Owls</h1>
+
+
         </div>
     </section>
 
@@ -30,13 +35,14 @@
             </div>
             <div id="sidetext">
                 <h1 class="subH1">Hoot we are</h1>
-                <p class="text"><span id="indent">Lorem ipsum dolor sit amet,</span> consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
+                <p class="text"><span id="indent">Lorem ipsum dolor sit amet,</span> consectetur adipisicing elit, sed
+                    do eiusmod tempor incididunt ut labore
                     et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
                     aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
                     cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
                     culpa qui officia deserunt mollit anim id est laborum.</p>
 
-                <p id="aboutbutton"><a id="learnlink" href="AboutUs.html">Learn more</a></p>    
+                <p id="aboutbutton"><a id="learnlink" href="AboutUs.html">Learn more</a></p>
             </div>
         </div>
     </section>
@@ -57,9 +63,12 @@
     <footer>
         <h2>Follow our updates</h2>
         <div class="footbar">
-            <div class="foot"><img id="logos" src="instagram.png"><a class="footobj" href="main.html">@ftc10195</a></div>
-            <div class="foot"><img id="logos" src="twitter.png"><a class="footobj" href="VargheseAssignment2.html">@ftc10195</a></div>
-            <div class="foot"><img id="logos" src="tiktok.png"><a class="footobj" href="SAOxTG.html">@FTC Night Owls</a></div>
+            <div class="foot"><img id="logos" src="instagram.png"><a class="footobj" href="main.html">@ftc10195</a>
+            </div>
+            <div class="foot"><img id="logos" src="twitter.png"><a class="footobj"
+                    href="VargheseAssignment2.html">@ftc10195</a></div>
+            <div class="foot"><img id="logos" src="tiktok.png"><a class="footobj" href="SAOxTG.html">@FTC Night Owls</a>
+            </div>
         </div>
     </footer>
 
