fixed href attribute for websites

--- a/main.html
+++ b/main.html
@@ -63,11 +63,11 @@
     <footer>
         <h2>Follow our updates</h2>
         <div class="footbar">
-            <div class="foot"><img id="logos" src="instagram.png"><a class="footobj" href="main.html">@ftc10195</a>
+            <div class="foot"><img id="logos" src="instagram.png"><a class="footobj" href="https://www.instagram.com/ftc10195/">@ftc10195</a>
             </div>
             <div class="foot"><img id="logos" src="twitter.png"><a class="footobj"
-                    href="VargheseAssignment2.html">@ftc10195</a></div>
-            <div class="foot"><img id="logos" src="tiktok.png"><a class="footobj" href="SAOxTG.html">@FTC Night Owls</a>
+                    href="https://twitter.com/ftc10195">@ftc10195</a></div>
+            <div class="foot"><img id="logos" src="tiktok.png"><a class="footobj" href="https://www.youtube.com/channel/UC_onYFtGVh7VkBqVpQ_IPWQ">@FTC Night Owls</a>
             </div>
         </div>
     </footer>
