added current event page and slideshow

--- a/AboutUs.html
+++ b/AboutUs.html
@@ -34,7 +34,74 @@
     </div>
 
     <section id="members">
+
+        <h1 class="subH1" id="members">Our members</h1>
+
         <div id="memba">
+            <div class="member"><img src="instagram.png" alt="Julian Maycock" title="Julian Maycock" width="135"
+                    height="180">
+                <h4>Julian Maycock</h4>
+                <p>Class of 2021</p>
+            </div>
+
+            <div class="member"><img src="twitter.png" alt="Janavi Mehta" title="Janavi Mehta" width="135" height="180">
+                <h4>Janavi Mehta</h4>
+                <p>Class of 2020</p>
+            </div>
+
+            <div class="member"><img src="tiktok.png" alt="Hannah Oh" title="Hannah Oh" width="135" height="180">
+                <h4>Hannah Oh</h4>
+                <p>Class of 2021</p>
+            </div>
+            <div class="member"><img src="instagram.png" alt="Julian Maycock" title="Julian Maycock" width="135"
+                    height="180">
+                <h4>Julian Maycock</h4>
+                <p>Class of 2021</p>
+            </div>
+
+            <div class="member"><img src="twitter.png" alt="Janavi Mehta" title="Janavi Mehta" width="135" height="180">
+                <h4>Janavi Mehta</h4>
+                <p>Class of 2020</p>
+            </div>
+
+            <div class="member"><img src="tiktok.png" alt="Hannah Oh" title="Hannah Oh" width="135" height="180">
+                <h4>Hannah Oh</h4>
+                <p>Class of 2021</p>
+            </div>
+            <div class="member"><img src="instagram.png" alt="Julian Maycock" title="Julian Maycock" width="135"
+                    height="180">
+                <h4>Julian Maycock</h4>
+                <p>Class of 2021</p>
+            </div>
+
+            <div class="member"><img src="twitter.png" alt="Janavi Mehta" title="Janavi Mehta" width="135" height="180">
+                <h4>Janavi Mehta</h4>
+                <p>Class of 2020</p>
+            </div>
+
+            <div class="member"><img src="tiktok.png" alt="Hannah Oh" title="Hannah Oh" width="135" height="180">
+                <h4>Hannah Oh</h4>
+                <p>Class of 2021</p>
+            </div>
+            <div class="member"><img src="instagram.png" alt="Julian Maycock" title="Julian Maycock" width="135"
+                    height="180">
+                <h4>Julian Maycock</h4>
+                <p>Class of 2021</p>
+            </div>
+
+            <div class="member"><img src="twitter.png" alt="Janavi Mehta" title="Janavi Mehta" width="135" height="180">
+                <h4>Janavi Mehta</h4>
+                <p>Class of 2020</p>
+            </div>
+
+            <div class="member"><img src="tiktok.png" alt="Hannah Oh" title="Hannah Oh" width="135" height="180">
+                <h4>Hannah Oh</h4>
+                <p>Class of 2021</p>
+            </div>
+            <div class="member"><img src="tiktok.png" alt="Hannah Oh" title="Hannah Oh" width="135" height="180">
+                <h4>Hannah Oh</h4>
+                <p>Class of 2021</p>
+            </div>
             <div class="member"><img src="instagram.png" alt="Julian Maycock" title="Julian Maycock" width="135"
                     height="180">
                 <h4>Julian Maycock</h4>
