adjusted the website for 1920x1080

--- a/AboutUs.html
+++ b/AboutUs.html
@@ -30,7 +30,7 @@
         </div>
     </section>
 
-    <div class="barss">
+    <div class="bars" id="aboutusbar">
     </div>
 
     <section id="members">
