--- a/CurrentE.html
+++ b/CurrentE.html
@@ -19,21 +19,18 @@
 
             <!-- Full-width images with number and caption text -->
             <div class="mySlides fade">
-                <div class="numbertext">1 / 3</div>
                 <img src="robomain.png" style="width:100%">
-                <div class="text">Caption Text</div>
+                <div class="text">Lorem ipsum dolor sit amet</div>
             </div>
 
             <div class="mySlides fade">
-                <div class="numbertext">2 / 3</div>
                 <img src="roboworkimg.png" style="width:100%">
-                <div class="text">Caption Two</div>
+                <div class="text">Lorem ipsum dolor sit amet</div>
             </div>
 
             <div class="mySlides fade">
-                <div class="numbertext">3 / 3</div>
                 <img src="robomain.png" style="width:100%">
-                <div class="text">Caption Three</div>
+                <div class="text">Lorem ipsum dolor sit amet</div>
             </div>
 
             <!-- Next and previous buttons -->
