added content for every page, as well as updated looks of nav bar

--- a/AboutUs.html
+++ b/AboutUs.html
@@ -140,9 +140,9 @@
             <div class="navtext">
                 <img src="logo_10195.png" id="logo" alt="logo of 10195">
                 <div class="nav" id="special"><a class="navobj" href="main.html">Home</a></div>
-                <div class="nav"><a class="navobj" href="AboutUs.html">AboutUs</a></div>
+                <div class="nav" id="about"><a class="navobj" href="AboutUs.html">AboutUs</a></div>
                 <div class="nav"><a class="navobj" href="CurrentE.html">CurrentEvents</a></div>
-                <div class="nav"><a class="navobj" href="OurRobot.html">OurRobot</a></div>
+                <div class="nav"><a class="navobj" href="Achievements.html">Achievements</a></div>
                 <div class="nav"><a class="navobj" href="Resources.html">Resources</a></div>
                 <div class="nav"><a class="navobj" href="Sponsors.html">Sponsors</a></div>
                 <div class="nav"><a class="navobj" href="ContactUs.html">ContactUs</a></div>
