--- a/Achievements.html
+++ b/Achievements.html
@@ -11,8 +11,8 @@
 
 <body>
 
-    <section id="sponsorintro">
-        <h1 class="subH1">bankai</h1>
+    <section id="Achievementsintro">
+        <h1 class="subH1">2021-2022 Season</h1>
     </section>
 
     <footer id="aboutus">
@@ -36,9 +36,9 @@
                 <div class="nav" id="special"><a class="navobj" href="main.html">Home</a></div>
                 <div class="nav"><a class="navobj" href="AboutUs.html">AboutUs</a></div>
                 <div class="nav"><a class="navobj" href="CurrentE.html">CurrentEvents</a></div>
-                <div class="nav"><a class="navobj" href="Achievements.html">Achievements</a></div>
+                <div class="nav" id="achievenments"><a class="navobj" href="Achievements.html">Achievements</a></div>
                 <div class="nav"><a class="navobj" href="Resources.html">Resources</a></div>
-                <div class="nav" id="sponsors"><a class="navobj" href="Sponsors.html">Sponsors</a></div>
+                <div class="nav"><a class="navobj" href="Sponsors.html">Sponsors</a></div>
                 <div class="nav"><a class="navobj" href="ContactUs.html">ContactUs</a></div>
             </div>
         </div>
