--- a/CurrentE.html
+++ b/CurrentE.html
@@ -13,24 +13,27 @@
 
     <section id="CurrentEintro">
 
-        <h1 class="subH1">Current Events</h1>
+        <h1 class="subH1" id="CurrentEheading">Current Events</h1>
         <!-- Slideshow container -->
         <div class="slideshow-container">
 
             <!-- Full-width images with number and caption text -->
             <div class="mySlides fade">
+                <div class="numbertext">1 / 3</div>
                 <img src="robomain.png" style="width:100%">
-                <div class="text">Lorem ipsum dolor sit amet</div>
+                <div class="text">Caption Text</div>
             </div>
 
             <div class="mySlides fade">
+                <div class="numbertext">2 / 3</div>
                 <img src="roboworkimg.png" style="width:100%">
-                <div class="text">Lorem ipsum dolor sit amet</div>
+                <div class="text">Caption Two</div>
             </div>
 
             <div class="mySlides fade">
+                <div class="numbertext">3 / 3</div>
                 <img src="robomain.png" style="width:100%">
-                <div class="text">Lorem ipsum dolor sit amet</div>
+                <div class="text">Caption Three</div>
             </div>
 
             <!-- Next and previous buttons -->
@@ -67,8 +70,8 @@
                 <img src="logo_10195.png" id="logo" alt="logo of 10195">
                 <div class="nav" id="special"><a class="navobj" href="main.html">Home</a></div>
                 <div class="nav"><a class="navobj" href="AboutUs.html">AboutUs</a></div>
-                <div class="nav"><a class="navobj" href="CurrentE.html">CurrentEvents</a></div>
-                <div class="nav"><a class="navobj" href="OurRobot.html">OurRobot</a></div>
+                <div class="nav" id="currente"><a class="navobj" href="CurrentE.html">CurrentEvents</a></div>
+                <div class="nav"><a class="navobj" href="Achievements.html">Achievements</a></div>
                 <div class="nav"><a class="navobj" href="Resources.html">Resources</a></div>
                 <div class="nav"><a class="navobj" href="Sponsors.html">Sponsors</a></div>
                 <div class="nav"><a class="navobj" href="ContactUs.html">ContactUs</a></div>
