--- a/CurrentE.html
+++ b/CurrentE.html
@@ -19,20 +19,17 @@
 
             <!-- Full-width images with number and caption text -->
             <div class="mySlides fade">
-                <div class="numbertext">1 / 3</div>
-                <img src="robomain.png" style="width:100%">
+                <img src="robomain.png" class="slideimage">
                 <div class="text">Caption Text</div>
             </div>
 
             <div class="mySlides fade">
-                <div class="numbertext">2 / 3</div>
-                <img src="roboworkimg.png" style="width:100%">
+                <img src="roboworkimg.png" class="slideimage">
                 <div class="text">Caption Two</div>
             </div>
 
             <div class="mySlides fade">
-                <div class="numbertext">3 / 3</div>
-                <img src="robomain.png" style="width:100%">
+                <img src="robomain.png" class="slideimage">
                 <div class="text">Caption Three</div>
             </div>
 
