added overline to contactus and fixed resources page

--- a/ContactUs.html
+++ b/ContactUs.html
@@ -43,9 +43,9 @@
                 <div class="nav"><a class="navobj" href="AboutUs.html">AboutUs</a></div>
                 <div class="nav"><a class="navobj" href="CurrentE.html">CurrentEvents</a></div>
                 <div class="nav"><a class="navobj" href="Achievements.html">Achievements</a></div>
-                <div class="nav" id="resources"><a class="navobj" href="Resources.html">Resources</a></div>
+                <div class="nav"><a class="navobj" href="Resources.html">Resources</a></div>
                 <div class="nav"><a class="navobj" href="Sponsors.html">Sponsors</a></div>
-                <div class="nav"><a class="navobj" href="ContactUs.html">ContactUs</a></div>
+                <div class="nav" id="contactus"><a class="navobj" href="ContactUs.html">ContactUs</a></div>
             </div>
         </div>
     </header>
