added header section for every page except main
also adjusteed the main page, to make it not change as adjustments happen

--- a/AboutUs.html
+++ b/AboutUs.html
@@ -9,11 +9,15 @@
 </head>
 
 <body>
+    <section class="sectionformat">
+        <div id="centralimg">
 
+        </div>
+    </section>
     <section id="aboutintro">
-        <div id="secondsection1">
+        <div id="secondsection0">
 
-            <div id="sidetext1">
+            <div id="sidetext0">
                 <h1 class="subH1">Hoot we are</h1>
                 <p class="text1"><span id="indent">Lorem ipsum dolor sit amet,</span> consectetur adipisicing elit, sed
                     do eiusmod tempor incididunt ut labore
