--- a/Achievements.html
+++ b/Achievements.html
@@ -10,7 +10,11 @@
 </head>
 
 <body>
+    <section class="sectionformat">
+        <div id="centralimg">
 
+        </div>
+    </section>
     <section id="Achievementsintro">
         <h1 class="subH1">2021-2022 Season</h1>
     </section>
