--- a/ContactUs.html
+++ b/ContactUs.html
@@ -10,13 +10,16 @@
 </head>
 
 <body>
+    <section class="sectionformat">
+        <div id="centralimg">
 
+        </div>
+    </section>
     <section id="contactusintro">
         <h1 class="subH1">Want to contant us?</h1>
-        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeZ4oLuUQBc55-tBGVFw6kXd_OjlA8Siq8R1rdKjKt2n5NNug/viewform?edit2=2_ABaOnud6KO1A2MEY34VjCdQDxMi2OXq8B2E9Jde3p6F4" 
-        width="550" height="600" 
-        frameborder="0" marginheight="0"
-        marginwidth="0">>
+        <iframe
+            src="https://docs.google.com/forms/d/e/1FAIpQLSeZ4oLuUQBc55-tBGVFw6kXd_OjlA8Siq8R1rdKjKt2n5NNug/viewform?edit2=2_ABaOnud6KO1A2MEY34VjCdQDxMi2OXq8B2E9Jde3p6F4"
+            width="550" height="600" frameborder="0" marginheight="0" marginwidth="0">>
 
         </iframe>
     </section>
