--- a/Resources.html
+++ b/Resources.html
@@ -10,12 +10,16 @@
 </head>
 
 <body>
+    <section class="sectionformat">
+        <div id="centralimg">
 
+        </div>
+    </section>
     <section id="resourceintro">
         <div id="secondsection1">
             <h1 class="subH1" id="subH13">Resources</h1>
-            <div id="sidetext1">
-                <h1 class="subH1">CAD/Designs files</h1>
+            <div id="sidetext3">
+                <h1 class="subH1">CAD/Design files</h1>
                 <p class="text1">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed
                     <br>do eiusmod tempor incididunt ut labore
                     <br>et dolore magna aliqua.
@@ -28,7 +32,27 @@
                     <br>et dolore magna aliqua.
                 </p>
             </div>
+
         </div>
+
+        </div>
+        <div id="thirdsection">
+            <div id="sidetext4">
+                <h1 class="subH1">Previous Engineering Notebooks</h1>
+                <p class="text1">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed
+                    <br>do eiusmod tempor incididunt ut labore
+                    <br>et dolore magna aliqua.
+                </p>
+            </div>
+            <div id="sidetext5">
+                <h1 class="subH1">bankai sources</h1>
+                <p class="text1">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed
+                    <br>do eiusmod tempor incididunt ut labore
+                    <br>et dolore magna aliqua.
+                </p>
+            </div>
+        </div>
+
     </section>
 
     <footer id="aboutus">
