--- a/Sponsors.html
+++ b/Sponsors.html
@@ -11,8 +11,9 @@
 
 <body>
 
-    <section id="sponsorintro">
-        <h1 class="subH1">bankai</h1>
+    <section class="sponsorsection">
+        <h1 class="subH1" id="subH12">Our Sponsors</h1>
+        <h1 class="placeholder">we broke oop</h1>
     </section>
 
     <footer id="aboutus">
