--- a/main.html
+++ b/main.html
@@ -9,8 +9,8 @@
 </head>
 
 <body>
-    <section class="sectionformat">
-        <div id="centralimg">
+    <section>
+        <div id="centralimg1">
             <img src="robomain.png" id="centrallimg"
                 alt="picture of the night owls team during 2022 states competition">
             <div id="logoss">
