--- a/CurrentE.html
+++ b/CurrentE.html
@@ -10,7 +10,11 @@
 </head>
 
 <body>
+    <section class="sectionformat">
+        <div id="centralimg">
 
+        </div>
+    </section>
     <section id="CurrentEintro">
 
         <h1 class="subH1" id="CurrentEheading">Current Events</h1>
