--- a/AboutUs.html
+++ b/AboutUs.html
@@ -34,7 +34,7 @@
         </div>
     </section>
 
-    <div class="bars" id="aboutusbar">
+    <div id="aboutusbar">
     </div>
 
     <section id="members">
