--- a/main.html
+++ b/main.html
@@ -5,7 +5,9 @@
     <link rel="stylesheet" href="Style.css">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16"/>
+    <link rel="icon" type="image/png" href="favicomatic/favicon-32x32.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="favicomatic/favicon- 16x16.png" sizes="16x16" />
+    
     <title>Night Owls Home</title>
 </head>
 
@@ -48,11 +50,12 @@
         </div>
     </section>
 
-    <div class="bars">
 
-    </div>
 
     <section class="sponsorsection">
+        <div class="bars">
+
+        </div>
         <h1 class="subH1" id="subH12">Our Sponsors</h1>
         <h1 class="placeholder">we broke oop</h1>
     </section>
