changed nav bar

--- a/main.html
+++ b/main.html
@@ -5,9 +5,8 @@
     <link rel="stylesheet" href="Style.css">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image/png" href="favicomatic/favicon-32x32.png" sizes="32x32" />
-    <link rel="icon" type="image/png" href="favicomatic/favicon- 16x16.png" sizes="16x16" />
-    
+    <link rel="icon" href="favicon.ico" />
+
     <title>Night Owls Home</title>
 </head>
 
@@ -65,20 +64,24 @@
     <footer>
         <h2>Follow our updates</h2>
         <div class="footbar">
-            <div class="foot"><img id="logos" src="instagram.png"><a class="footobj" href="https://www.instagram.com/ftc10195/">@ftc10195</a>
+            <div class="foot"><img id="logos" src="instagram.png"><a class="footobj"
+                    href="https://www.instagram.com/ftc10195/">@ftc10195</a>
             </div>
             <div class="foot"><img id="logos" src="twitter.png"><a class="footobj"
                     href="https://twitter.com/ftc10195">@ftc10195</a></div>
-            <div class="foot"><img id="logos" src="tiktok.png"><a class="footobj" href="https://www.youtube.com/channel/UC_onYFtGVh7VkBqVpQ_IPWQ">@FTC Night Owls</a>
+            <div class="foot"><img id="logos" src="tiktok.png"><a class="footobj"
+                    href="https://www.youtube.com/channel/UC_onYFtGVh7VkBqVpQ_IPWQ">@FTC Night Owls</a>
             </div>
         </div>
     </footer>
 
     <header id="colorbar">
+        <img src="logo_10195.png" id="logo" alt="logo of 10195">
+
         <div class="navbar">
+            <div id="title"><a id="titletext" href="main.html">| 10195 Night Owls</a></div>
             <div class="navtext">
-                <img src="logo_10195.png" id="logo" alt="logo of 10195">
-                <div class="nav" id="home"><a class="navobj" href="main.html">Home</a></div>
+
                 <div class="nav"><a class="navobj" href="AboutUs.html">AboutUs</a></div>
                 <div class="nav"><a class="navobj" href="CurrentE.html">CurrentEvents</a></div>
                 <div class="nav"><a class="navobj" href="Achievements.html">Achievements</a></div>
